# BaseDX11App

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate.bat  premake5.lua
cmake/: AsyncLogger.cmake  ImGui.cmake
src/: common.hpp  main.cpp
src/FileMgr/: BaseExplorerItem.cpp  BaseExplorerItem.hpp  File.cpp  File.hpp  FileMgr.cpp  FileMgr.hpp  Folder.cpp  Folder.hpp
src/GUI/: GUI.cpp  GUI.hpp
src/Logger/: LogHelper.cpp  LogHelper.hpp
src/Renderer/: Backend.cpp  Backend.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/gui/: gui.hpp  main_window.cpp
src/logger/: LogSink.cpp  LogSink.hpp  Logger.cpp  Logger.hpp
src/renderer/: Backend.cpp  Backend.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
